# ai-usage

./: .gitignore  AGENTS.md  INSTALL.md  README.md  ROADMAP.md  SPEC.md  deny.toml  flake.nix  justfile
docs/: schema.md
rust/: Cargo.toml
rust/crates/ai-usage/: Cargo.toml
rust/crates/ai-usage-cli/: Cargo.toml
rust/crates/ai-usage-cli/src/: main.rs  render.rs
rust/crates/ai-usage/src/: config.rs  error.rs  lib.rs  model.rs  provider.rs  recommend.rs  redact.rs  report.rs  source.rs  test_support.rs  view.rs  walk.rs
rust/crates/ai-usage/src/providers/: claude.rs  codex.rs  deepseek.rs  grok.rs  minimax.rs  mod.rs  openrouter.rs  zai.rs
