[package]
name = "ai-usage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Library for tracking AI coding-provider quotas, balances, and velocity, with a recommendation engine."
readme = "../../README.md"
keywords = ["ai", "cli", "quota", "codex", "claude"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
time.workspace = true
rust_decimal.workspace = true
async-trait.workspace = true
regex.workspace = true

[lints]
workspace = true
